use Apollo Client 2.0

--- a/react-apollo/end/public/index.html
+++ b/react-apollo/end/public/index.html
@@ -22,6 +22,10 @@
     <title>React App</title>
   </head>
   <body>
+  <style>
+    html, body { margin: 8px; max-width: 600px; }
+  </style>
+  <div id="root"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
